adding jwt authentication feature
