# project-1/Asgun-alt/pkg/domain/response/response.go
@@ -2,6 +2,7 @@ package response
 
 import (
 	"time"
+
 	"github.com/gnumi34/golang-mentoring/tree/main/project-1/Asgun-alt/pkg/user/service/users"
 	"gorm.io/gorm"
 )
@@ -21,6 +22,7 @@ type User struct {
 	Username   string
 	Email      string `gorm:"unique"`
 	Password   string
+	Token      string
 	Created_At time.Time      `gorm:"autoCreateTime"`
 	Updated_At time.Time      `gorm:"autoUpdateTime"`
 	Deleted_At gorm.DeletedAt `gorm:"index"`
@@ -34,6 +36,26 @@ type GetUsersResponse struct {
 	Updated_At time.Time `json:"updated_at"`
 }
 
+type LoginUserResponse struct {
+	ID         string    `json:"id"`
+	Username   string    `json:"username"`
+	Email      string    `json:"email"`
+	Token      string    `json:"token"`
+	Created_At time.Time `json:"created_at"`
+	Updated_At time.Time `json:"updated_at"`
+}
+
+func FromLoginUserDomain(userDomain users.UsersDomain) User {
+	return User{
+		ID:         userDomain.ID,
+		Username:   userDomain.Username,
+		Email:      userDomain.Email,
+		Token:      userDomain.Token,
+		Created_At: userDomain.Created_At,
+		Updated_At: userDomain.Updated_At,
+	}
+}
+
 func FromUserDomain(userDomain users.UsersDomain) User {
 	return User{
 		ID:         userDomain.ID,
@@ -45,12 +67,12 @@ func FromUserDomain(userDomain users.UsersDomain) User {
 	}
 }
 
-func FromGetUserDomain(userDomain users.UsersDomain) GetUsersResponse {
-	return GetUsersResponse{
-		ID:         userDomain.ID,
-		Username:   userDomain.Username,
-		Email:      userDomain.Email,
-		Created_At: userDomain.Created_At,
-		Updated_At: userDomain.Updated_At,
-	}
-}
+// func FromGetUserDomain(userDomain users.UsersDomain) GetUsersResponse {
+// 	return GetUsersResponse{
+// 		ID:         userDomain.ID,
+// 		Username:   userDomain.Username,
+// 		Email:      userDomain.Email,
+// 		Created_At: userDomain.Created_At,
+// 		Updated_At: userDomain.Updated_At,
+// 	}
+// }
